# TicketInsight

./: CHANGELOG.md  DEPLOYMENT.md  GOOGLE_SHEETS_SETUP.md  LICENSE  README.md  __init__.py  ai_analyzer.py  analytics.py  app.py  config.py  dashboard.py  data_visualizer.py  google_sheets.py  jira_integration.py  main.py  main_new.py  project_requirements.txt  pyproject.toml  setup_github.sh  utils.py
