[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.2",
    "google-auth>=2.40.2",
    "google-generativeai>=0.8.5",
    "gspread>=6.2.1",
    "jira>=3.8.0",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "trafilatura>=2.0.0",
]
